bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:5: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (vacation==true){
         ^